fix: dark mode suggestion text color (temporary)

--- a/ui/src/app.css
+++ b/ui/src/app.css
@@ -10,6 +10,7 @@
 .suggestion-item-list {
     box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
     background: white;
+    color: black;
     border-radius: 4px;
     padding: 8px;
 }
